pagina de hidratacao e historico de hidratacao com css

--- a/fortisapp/templates/html/hidratacao.html
+++ b/fortisapp/templates/html/hidratacao.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="stylesheet" href="{% static 'hidratacao/styles.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Hidratação</title>
 </head>
 <body>
-    <h1>HIDRATAÇÃO</h1>
+    <h1>Registro de Hidratação</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Registrar</button>
+    </form>
+
+    <div id="total">Total diário de água: {{ total_diario }} ml</div>
+    
+    <a href="{% url 'historico_hidratacao' %}">Ver Histórico de Registros</a>
+
 </body>
 </html>
