--- a/acompanha_peso.css
+++ b/acompanha_peso.css
@@ -9,22 +9,21 @@ body {
     align-items: center;
 }
 
-nav {
+nav.menu {
     background-color: #007BFF; /* Cor de fundo do menu */
+    padding: 15px; /* Espaçamento do menu */
     width: 100%; /* Largura total do menu */
-    padding: 15px; /* Espaçamento interno do menu */
-    display: flex;
-    justify-content: center; /* Centraliza os links no menu */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra do menu */
 }
 
-nav a {
-    color: white; /* Cor do texto dos links */
+nav.menu a {
+    color: white; /* Cor dos links */
     text-decoration: none; /* Remove o sublinhado */
-    margin: 0 15px; /* Margem entre os links */
+    margin: 0 15px; /* Espaçamento entre os links */
     font-size: 18px; /* Tamanho da fonte dos links */
 }
 
-nav a:hover {
+nav.menu a:hover {
     text-decoration: underline; /* Sublinha ao passar o mouse */
 }
 
