--- a/fortisapp/templates/html/login.html
+++ b/fortisapp/templates/html/login.html
@@ -12,14 +12,7 @@
         <form method="post">
             {% csrf_token %}
             <h1>Login</h1>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div>
-                <label for="senha">Senha:</label>
-                <input type="senha" id="senha" name="senha" required>
-            </div>
+            {{ form.as_p }}
             <button type="submit">Entrar</button>
         </form>
         <p>Ainda não tem cadastro? <a href="{% url 'cadastro' %}">Clique aqui para se cadastrar</a>.</p>
