--- a/fortisapp/templates/html/cadastro.html
+++ b/fortisapp/templates/html/cadastro.html
@@ -2,16 +2,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/cadastro.css' %}">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/cadastro.css' %}">
 </head>
 <body>
+    <h1>Cadastro</h1>
     <form method="post">
         {% csrf_token %}
-        <h1>Cadastro</h1>
         {{ form.as_p }}
+        {% if form.errors %}
+            <ul>
+                {% for field in form %}
+                    {% for error in field.errors %}
+                        <li><strong>{{ field.label }}:</strong> {{ error }}</li>
+                    {% endfor %}
+                {% endfor %}
+                {% for error in form.non_field_errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
         <button type="submit">Cadastrar</button>
     </form>
 </body>
