--- a/fortisapp/templates/html/login.html
+++ b/fortisapp/templates/html/login.html
@@ -2,9 +2,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
     <title>Login</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
             {{ form.as_p }}
             <button type="submit">Entrar</button>
         </form>
-        <p>Ainda não tem cadastro? <a href="{% url 'cadastro' %}">Clique aqui para se cadastrar</a>.</p>
+        <p>Ainda não tem cadastro? <a href="{% url 'cadastro' %}">Cadastre-se aqui</a>.</p>
     </main>
 </body>
 </html>
