--- a/fortisapp/templates/html/veja_imc.html
+++ b/fortisapp/templates/html/veja_imc.html
@@ -8,13 +8,21 @@
     <title>Veja Seu Peso</title>
 </head>
 <body>
-    <nav class="menu"></nav>
-    <a href="#home" tabindex="1">Home</a>
-    <a href="#hidratacao" tabindex="2">Hidratação</a>
-    <a href="#meupeso" tabindex="3">Meu peso</a>
-    <a href="#meustreinos" tabindex="4">Meus treinos</a>
-    <a href="#reduzirestresse" tabindex="5">Reduzir estresse</a>
-    <a href="#saude" tabindex="6">Saúde</a>
+    <nav class="menu">
+        <a href="{% url 'home' %}" tabindex="1"><i class="fa-light fa-house"></i> Home</a>
+        <a href="{% url 'hidratacao' %}" tabindex="2"><i class="fas fa-water"></i> Hidratação</a>
+        <a href="{% url 'meupeso' %}" tabindex="3"><i class="fas fa-weight"></i> Meu peso</a>
+        <a href="#meustreinos" tabindex="4"><i class="fas fa-dumbbell"></i> Meus treinos</a>
+        <a href="{% url 'estresse' %}" tabindex="5"><i class="fas fa-spa"></i> Reduzir estresse</a>
+        <a href="#saude" tabindex="6"><i class="fas fa-heartbeat"></i> Saúde</a>
+        
+        <!-- Botão de logout -->
+        <form action="{% url 'logout' %}" method="post" style="display:inline;">
+            {% csrf_token %}
+            <button type="submit" tabindex="7" style="border:none; background:none; color:#000; cursor:pointer;">
+                <i class="fas fa-sign-out-alt"></i> Log out
+            </button>
+        </form>
     </nav>
     <main>
         <h1>Veja Seu Peso</h1>
