--- a/fortisapp/templates/html/home.html
+++ b/fortisapp/templates/html/home.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <nav class="menu">
-        <a href="#home" tabindex="1"><i class="fa-light fa-house"></i> Home</a>
-        <a href="#hidratacao" tabindex="2"><i class="fas fa-water"></i> Hidratação</a>
-        <a href="#meupeso" tabindex="3"><i class="fas fa-weight"></i> Meu peso</a>
+        <a href="{% url 'home' %}" tabindex="1"><i class="fa-light fa-house"></i> Home</a>
+        <a href="{% url 'hidratacao' %}" tabindex="2"><i class="fas fa-water"></i> Hidratação</a>
+        <a href="{% url 'meupeso' %}" tabindex="3"><i class="fas fa-weight"></i> Meu peso</a>
         <a href="#meustreinos" tabindex="4"><i class="fas fa-dumbbell"></i> Meus treinos</a>
-        <a href="#reduzirestresse" tabindex="5"><i class="fas fa-spa"></i> Reduzir estresse</a>
+        <a href="{% url 'estresse' %}" tabindex="5"><i class="fas fa-spa"></i> Reduzir estresse</a>
         <a href="#saude" tabindex="6"><i class="fas fa-heartbeat"></i> Saúde</a>
         
         <!-- Botão de logout -->
