pagina hidratacao e historico visiveis

--- a/fortisapp/templates/html/hidratacao.html
+++ b/fortisapp/templates/html/hidratacao.html
@@ -34,7 +34,7 @@
 
     <div id="total">Total diário de água: {{ total_diario }} ml</div>
     
-    <a href="{% url 'historico_hidratacao' %}">Ver Histórico de Registros</a>
+    <a href="{% url 'histhidratacao' %}">Ver Histórico de Registros</a>
 
 </body>
 </html>
