--- a/fortisapp/templates/html/historicohidratacao.html
+++ b/fortisapp/templates/html/historicohidratacao.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/histhidra.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/historicohidratacao.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico de hidratação</title>
@@ -37,6 +37,6 @@
         </ul>
     </div>
 
-    <a href="{% url 'registro_hidratacao' %}">Voltar para o Registro</a>
+    <a href="{% url 'hidratacao' %}">Voltar para o Registro</a>
 </body>
 </html>
