--- a/fortisapp/templates/html/hidratacao.html
+++ b/fortisapp/templates/html/hidratacao.html
@@ -4,37 +4,41 @@
 <head>
     <link rel="stylesheet" type="text/css" href="{% static 'css/hidratacao.css' %}">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Hidratação</title>
 </head>
 <body>
     <nav class="menu">
-        <a href="{% url 'home' %}" tabindex="1"><i class="fa-light fa-house"></i> Home</a>
-        <a href="{% url 'hidratacao' %}" tabindex="2"><i class="fas fa-water"></i> Hidratação</a>
-        <a href="{% url 'meupeso' %}" tabindex="3"><i class="fas fa-weight"></i> Meu peso</a>
-        <a href="#meustreinos" tabindex="4"><i class="fas fa-dumbbell"></i> Meus treinos</a>
-        <a href="{% url 'estresse' %}" tabindex="5"><i class="fas fa-spa"></i> Reduzir estresse</a>
-        <a href="#saude" tabindex="6"><i class="fas fa-heartbeat"></i> Saúde</a>
+        <a href="{% url 'home' %}" tabindex="1">Home</a>
+        <a href="{% url 'hidratacao' %}" tabindex="2">Hidratação</a>
+        <a href="{% url 'meupeso' %}" tabindex="3">Meu peso</a>
+        <a href="{% url 'meustreinos' %}" tabindex="4">Meus treinos</a>
+        <a href="{% url 'estresse' %}" tabindex="5">Reduzir estresse</a>
+        <a href="{% url 'saude' %}" tabindex="6">Saúde</a>
         
         <!-- Botão de logout -->
         <form action="{% url 'logout' %}" method="post" style="display:inline;">
             {% csrf_token %}
             <button type="submit" tabindex="7" style="border:none; background:none; color:#000; cursor:pointer;">
-                <i class="fas fa-sign-out-alt"></i> Log out
+                Log out
             </button>
         </form>
     </nav>
 
-    <h1>Registro de Hidratação</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Registrar</button>
-    </form>
+    <main>
+        <section>
+            <h1>Registro de Hidratação</h1>
 
-    <div id="total">Total diário de água: {{ total_diario }} ml</div>
-    
-    <a href="{% url 'histhidratacao' %}">Ver Histórico de Registros</a>
+            <form method="POST">
+                {% csrf_token %}
+                <label for="quantidade_agua">Quantos ml de água você bebeu hoje?</label>
+                <input type="number" name="quantidade_agua" id="quantidade_agua" required>
+                <button type="submit">Registrar</button>
+            </form>
 
+            <div id="total">Total diário de água: {{ total_diario }} ml</div>
+
+            <a href="{% url 'histhidratacao' %}">Ver Histórico de Registros</a>
+        </section>
+    </main>
 </body>
 </html>
