--- a/fortisapp/templates/html/hidratacao.html
+++ b/fortisapp/templates/html/hidratacao.html
@@ -11,7 +11,9 @@
         <a href="{% url 'home' %}" tabindex="1">Home</a>
         <a href="{% url 'hidratacao' %}" tabindex="2">Hidratação</a>
         <a href="{% url 'meupeso' %}" tabindex="3">Meu peso</a>
+        <a href="#meustreinos" tabindex="4"><i class="fas fa-dumbbell"></i> Meus treinos</a>
         <a href="{% url 'estresse' %}" tabindex="5">Reduzir estresse</a>
+        <a href="#saude" tabindex="6"><i class="fas fa-heartbeat"></i> Saúde</a>
         
         <!-- Botão de logout -->
         <form action="{% url 'logout' %}" method="post" style="display:inline;">
