--- a/fortisapp/templates/html/meupeso.html
+++ b/fortisapp/templates/html/meupeso.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/pesoeihc.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/pesoeimc.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cálculo do IMC</title>
