--- a/fortisapp/templates/html/relaxamentomuscular.html
+++ b/fortisapp/templates/html/relaxamentomuscular.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relaxamento muscular</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/relaxamento.css' %}">
 </head>
 <body>
     <nav class="menu">
