--- a/fortisapp/templates/html/respiracaoguiada.html
+++ b/fortisapp/templates/html/respiracaoguiada.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Respiração guiada</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/respiracaoguiada.css' %}">
 </head>
 <body>
     <nav class="menu">
