Atualização do html

--- a/fortisapp/templates/html/alongamento.html
+++ b/fortisapp/templates/html/alongamento.html
@@ -55,6 +55,8 @@
         Não force os movimentos; o objetivo é relaxar, não causar dor.
         <br>
         Tente fazer essa sequência diariamente para melhores resultados!</p>
+        <br>
+        <a href="{% url 'sentimento' %}">Realizou a prática? registre suas considerações! </a>
     
 </body>
 </html>
