--- a/fortisapp/templates/html/relaxamentomuscular.html
+++ b/fortisapp/templates/html/relaxamentomuscular.html
@@ -54,6 +54,8 @@
     <br>
     <h2>4.Finalização:</h2>
     <p>Ao terminar, tome um momento para refletir sobre como seu corpo se sente. Compare a sensação de relaxamento com a tensão que você tinha antes do exercício.</p>
+    <br>
+        <a href="{% url 'sentimento' %}">Realizou a prática? registre suas considerações! </a>
     
 </body>
 </html>
