--- a/fortisapp/templates/html/respiracaoguiada.html
+++ b/fortisapp/templates/html/respiracaoguiada.html
@@ -67,6 +67,8 @@
         Expire: Solte o ar pela narina aberta.
         <br>
         Repita: Faça isso por 5 a 10 minutos, alternando as narinas.</p>
+        <br>
+        <a href="{% url 'sentimento' %}">Realizou a prática? registre suas considerações! </a>
     
 </body>
 </html>
