--- a/fortisapp/static/css/adicionartreino.css
+++ b/fortisapp/static/css/adicionartreino.css
@@ -70,7 +70,42 @@ div {
     margin-top: 20px; /* Espaçamento entre os links e os botões */
 }
 
-h2 {
-    color: #333;
+label {
     margin-top: 20px;
+    font-weight: bold;
+    color: #333;
+}
+
+input[type="text"],
+input[type="number"],
+select {
+    width: 100%;
+    max-width: 400px; /* Limita a largura do campo */
+    padding: 10px;
+    margin: 5px 0 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+input[type="text"]:focus,
+input[type="number"]:focus,
+select:focus {
+    border-color: #4CAF50;
+    outline: none; /* Remove a borda padrão do foco */
+}
+
+button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button[type="submit"]:hover {
+    background-color: #45a049; /* Cor do botão ao passar o mouse */
 }
