--- a/fortisapp/static/css/editartreino.css
+++ b/fortisapp/static/css/editartreino.css
@@ -74,3 +74,55 @@ h2 {
     color: #333;
     margin-top: 20px;
 }
+
+/* Estilizando o formulário */
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label {
+    margin: 10px 0 5px;
+    font-weight: bold;
+}
+
+input[type="text"],
+input[type="number"],
+select,
+textarea {
+    width: 100%;
+    max-width: 400px; /* Limita a largura do campo */
+    padding: 10px;
+    margin: 5px 0 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+input[type="text"]:focus,
+input[type="number"]:focus,
+select:focus,
+textarea:focus {
+    border-color: #4CAF50;
+    outline: none; /* Remove a borda padrão do foco */
+}
+
+button[type="submit"] {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button[type="submit"]:hover {
+    background-color: #45a049; /* Cor do botão ao passar o mouse */
+}
+
+#exercicio_substituto_container {
+    width: 100%; /* Para ocupar a largura total */
+}
